--- a/index.html
+++ b/index.html
@@ -1,152 +1,28 @@
-  <!DOCTYPE html>
-  <html>
-    <head>
-      <!--Import Google Icon Font-->
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <!--Import materialize.css-->
-      <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-	  <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-	  <link href="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-      <!--Let browser know website is optimized for mobile-->
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    </head>
-	<style>
-	.brand-logo{
-	margin-left:1em;
-	}
-	.buttons{
-	height:46px;
-	border-radius:10px 10px 0px 0px;
-	width:100%;
-	padding:15px;
-	padding-top:10px;
-	}
-	.button{
-	border:2px solid rgba(0,0,0,0.05);
-	width:16px;
-	height:16px;
-	font-size:2em;
-	font-weight:800;
-	color:white;
-	display:inline-block;
-	border-radius:50%;
-	padding:3px;
-	margin:5px;
-	}
-	
-	pre{
-	text-align:center;
-	}
-	.terminalblock{
-	text-align:center
-	
-	border-radius:0px 0px 5px 5px;
-	
-	}
-	.terminal{
-	border-radius:15px;
-	
-	}
-	.text{
-	transform:translateY(-72px);
-	font-size:20px;
-	text-align:center;
-	}
-	</style>
-    <body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <title>Bootstrap 101 Template</title>
 
-  <nav>
-    <div class="nav-wrapper deep-purple">
-      <a href="/" class="brand-logo left">CTFBot</a>
-      <ul id="nav-mobile" class="right hide-on-med-and-down">
-		
-        <li><a href="sass.html">Features</a></li>
-        <li><a href="#">Goals</a></li>
-        <li><a href="collapsible.html">Source</a></li>
-      </ul>
-    </div>
-  </nav>
-   
-<div class="white" style="padding-top:30px;padding-bottom:30px;">
-	<div class="terminal container grey lighten-1">
-	<div class="buttons deep-purple darken-1" style="border:2px solid rgba(0,0,0,0.2);border-width: 2px 2px 0px 2px;">
-		<p class="button red accent-1">&nbsp;</button>
-		<p class="button yellow accent-1">&nbsp;</button>
-		<p class="button green accent-1">&nbsp;</button>
-		<p class="text grey-text text-lighten-2">localhost@CTFBot</p>
-	</div>
-	<div class="terminalblock black white-text" style="border:2px solid rgba(0,0,0,0.2);border-width: 0px 2px 2px 2px;border-radius:0px 0px 5px 5px " >
-	&nbsp;
-<pre>  ██████████████████████████████████████████████████████
- ██                                                     ██
- █  ███████████████████████████████████████████████████  █
- █  ███████████████████████████████████████████████████  █
- █  ██████████888█████.d888█888███████████████888██████  █
- █  ███████████888████d88P"██888███████████████888█████  █
- █  ███████████888████888████888███████████████888█████  █
- █  ███.d8888b█888888█888888█88888b.███.d88b.██888888██  █
- █  ██d88P"████888████888████888█"88b█d88""88b█888█████  █
- █  ██888██████888████888████888██888█888██888█888█████  █
- █  ██Y88b.████Y88b.██888████888█d88P█Y88..88P█Y88b.███  █
- █  ███"Y8888P██"Y888█888████88888P"███"Y88P"███"Y888██  █
- █  ███████████████████████████████████████████████████  █
- █  ███████████████████████████████████████████████████  █
- ██                                                     ██
-  ███████████████████████████████████████████████████████
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <h1>Hello, world!</h1>
 
-</pre>
-	</div>
-	</div>
-</div>
-	
-	
-<div class="container">
-	<section>
-		
-		
-	
-	
-	</section>
-	<section>
-		<h4>ABOUT US</h4>
-	
-	
-	</section>
-	<section>
-		<h4>CONTACT US</h4>
-	
-	
-	</section>
-</div>
-        <footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Footer Content</h5>
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container">
-            © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
-          </div>
-        </footer>
-            
-      <!--JavaScript at end of body for optimized loading-->
-      <script type="text/javascript" src="js/materialize.min.js"></script>
-    </body>
-  </html>
-        
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
+  </body>
+</html>
