moved WhiteRose repo to branch

--- a/about/wh1t3r0se.html
+++ b/about/wh1t3r0se.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>S1gm0id Team</title>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../main.css">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link href="https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap" rel="stylesheet">
 </head>
 <header>
     <nav>
-      <a href="#" class="underline">/Home</a>
-      <a href="about.html" class="underline">/About</a>
+      <a href="../index.html" class="underline">/Home</a>
+      <a href="../about.html" class="underline">/About</a>
       <a href="mailto:S1gm0idCTF@gmail.com" class="underline">/Contact</a>
     </nav>
   </header>
 <body>
-	<img src="s1m0id_2.png">
-	<!--<img src="s1m0id_2.png">-->
-	<div id="container">
-		<p>S1gm0id</p>
-  		<p>S1gm0id</p>
-  		<p>S1gm0id</p>
-	</div>
+	<div class="site-title">
+    <h1>
+      <a href="#">wh1t3r0se:$</a><span class="cursor">█</span>
+    </h1>
+  </div>
+  <div id="app" class="container">
 
+  </div>
   <footer>
-<br><br><br><br>
     <div>
 
       &copy;
@@ -45,7 +44,6 @@
 
   </footer>
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-  <script src="app.js"></script>
-
+  <script src="wh1t3r0se.js"></script>
 </body>
 </html>
