--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>S1gm0id Team</title>
@@ -10,24 +10,24 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <link href="https://fonts.googleapis.com/css?family=Fira+Code:400,700&display=swap" rel="stylesheet">
 </head>
-<header>
+<body>
+  <header>
     <nav>
-      <a href="#" class="underline">/Home</a>
+      <a href="index.html" class="underline">/Home</a>
       <a href="about.html" class="underline">/About</a>
       <a href="mailto:S1gm0idCTF@gmail.com" class="underline">/Contact</a>
     </nav>
   </header>
-<body>
-	<img src="s1m0id_2.png">
-	<!--<img src="s1m0id_2.png">-->
-	<div id="container">
-		<p>S1gm0id</p>
-  		<p>S1gm0id</p>
-  		<p>S1gm0id</p>
-	</div>
+  <div class="site-title">
+    <h1>
+      <a href="#">S1gm0id:$</a><span class="cursor">█</span>
+    </h1>
+  </div>
+  <div id="app" class="container">
+
+  </div>
 
   <footer>
-<br><br><br><br>
     <div>
 
       &copy;
@@ -46,6 +46,5 @@
   </footer>
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <script src="app.js"></script>
-
 </body>
 </html>
