--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
 	<link rel="stylesheet" href="css/curtain.css" />
 	<link rel="stylesheet" href="css/index.css" />
+	<script src="jquery-3.4.1.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
 	<link href="./css/bootstrap.css" rel="stylesheet">
 	<link href="./css/index.css" rel="stylesheet">
-	<link href="./css/starter-template.css" rel="stylesheet">
 	<!-- Let browser know website is optimized for mobile
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/> -->
 </head>
@@ -19,9 +20,9 @@
 		<div class="curtain-panel right">
 			<img src="assets/logo-bottom.png" class="curtain-piece-right" id="curtain-right" />
 		</div>
-		<div class="content">
+		<div class="main-stuff">
 			<nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
-				<a class="navbar-brand" href="#">S1gm0id</a>
+				<a class="navbar-brand" href="#"><img src="./assets/circle-small.png"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
 					aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
@@ -64,10 +65,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
 		integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
 	</script>
-
-	<script src="./js/bootstrap.min.js"></script>
 	<script src="js/curtain.js"></script>
-	<script src="jquery-3.4.1.min.js"></script>
 </body>
 
 </html>
